# glib-footprint

./: .gitignore  README.md  compact-classes.vala  datastructures.vala  empty.vala  full-classes.vala  meson.build
